fixed positioning for menu hamburger and nav links when not collapsed

--- a/client/src/components/ResponsiveAppBar.css
+++ b/client/src/components/ResponsiveAppBar.css
@@ -8,7 +8,7 @@
   }
   
   .navbar {
-    height: 200px;
+    height: 150px;
     background-color: #fffeca;
     position: absolute;
     width: 100%;
@@ -17,17 +17,22 @@
   #nav-row-container{
     margin-top: 40px;
   }
+
+  #all-pages-link{
+    width: 120px;
+  }
   
   .nav-elements ul {
     display: flex;
     justify-content: space-between;
     list-style-type: none;
-    margin: 0% 10% 0% 0%;
     position: absolute;
+    right: 45px;
   }
   
   .nav-elements ul li:not(:last-child) {
-    margin-right: 60px;
+    margin-right: 35px;
+    width: 70px;
   }
   
   .nav-elements ul a {
@@ -57,6 +62,10 @@
     height: 100px;
     position: relative;
     top: -20px;
+  }
+
+  #wide-nav {
+    padding-left: 62%;
   }
 
   .menu-icon {
@@ -91,9 +100,10 @@
 
 
     .menu-icon {
-        position: relative;
-        margin-left: 42%;
+        position: absolute;
+        /* margin-left: 42%; */
         display: block;
+        left: 80%;
     }
 
     .condensed-dropdown{
